# nonebot_plugin_paste_emoji

./: README.md  pyproject.toml
src/: nonebot_plugin_paste_emoji.py
